Migration to spring-boot and Java 17 and replacement of olca-cloud with olca-git