@@ -2,17 +2,19 @@ package com.greendelta.collaboration.util;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.eclipse.jgit.revwalk.RevCommit;
 
+import com.fasterxml.jackson.annotation.JsonIgnoreType;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
@@ -22,6 +24,10 @@ public class ObjectMap extends HashMap<String, Object> {
 	private static final Logger log = LogManager.getLogger(ObjectMap.class);
 	private static final ObjectMapper mapper = new ObjectMapper();
 
+	static {
+		mapper.addMixIn(RevCommit.class, IgnoreMixIn.class);
+	}
+	
 	public ObjectMap() {
 		this(new HashMap<>());
 	}
@@ -42,8 +48,9 @@ public class ObjectMap extends HashMap<String, Object> {
 	}
 
 	private ObjectMap(Map<String, Object> managed) {
-		if (managed != null)
+		if (managed != null) {
 			putAll(managed);
+		}
 	}
 
 	private static Map<String, Object> toMap(String json) {
@@ -61,15 +68,17 @@ public class ObjectMap extends HashMap<String, Object> {
 	public void removeAllBut(String... fields) {
 		if (fields == null)
 			return;
-		Set<String> fieldSet = new HashSet<>();
-		for (String field : fields)
+		var fieldSet = new HashSet<String>();
+		for (var field : fields) {
 			if (field.contains("."))
 				throw new IllegalArgumentException("removeAllBut doesn't support complex fields");
-			else
-				fieldSet.add(field);
-		for (String key : new HashSet<>(keySet()))
-			if (!fieldSet.contains(key))
+			fieldSet.add(field);
+		}
+		for (var key : new HashSet<>(keySet())) {
+			if (!fieldSet.contains(key)) {
 				remove(key);
+			}
+		}
 	}
 
 	@Override
@@ -77,15 +86,16 @@ public class ObjectMap extends HashMap<String, Object> {
 		if (key instanceof String && value instanceof String) {
 			remove(new String[] { key.toString(), value.toString() });
 			return true;
-		} else
-			return super.remove(key, value);
+		}
+		return super.remove(key, value);
 	}
 
 	public void remove(String... fields) {
 		if (fields == null)
 			return;
-		for (String field : fields)
+		for (String field : fields) {
 			remove(field);
+		}
 	}
 
 	@Override
@@ -97,18 +107,20 @@ public class ObjectMap extends HashMap<String, Object> {
 		if (map == null)
 			return null;
 		if (field.contains(".")) {
-			String prefix = field.substring(0, field.lastIndexOf('.'));
+			var prefix = field.substring(0, field.lastIndexOf('.'));
 			field = field.substring(field.lastIndexOf('.') + 1);
-			Collection<Object> allNext = getAll(map, prefix);
-			List<Object> previous = new ArrayList<>();
-			for (Object next : allNext)
-				if (next instanceof Map)
+			var allNext = getAll(map, prefix);
+			var previous = new ArrayList<>();
+			for (var next : allNext) {
+				if (next instanceof Map) {
 					previous.add(((Map<?, ?>) next).remove(field));
+				}
+			}
 			return previous;
-		} else if (map == this)
+		}
+		if (map == this)
 			return super.remove(field);
-		else
-			return map.remove(field);
+		return map.remove(field);
 	}
 
 	@SuppressWarnings("unchecked")
@@ -124,21 +136,21 @@ public class ObjectMap extends HashMap<String, Object> {
 	public Object put(String field, Object value) {
 		Map<String, Object> map = this;
 		if (field.contains(".")) {
-			String prefix = field.substring(0, field.lastIndexOf('.'));
+			var prefix = field.substring(0, field.lastIndexOf('.'));
 			field = field.substring(field.lastIndexOf('.') + 1);
 			map = get(map, prefix, true, true);
 		}
 		if (map == this)
 			return super.put(field, value);
-		else
-			return map.put(field, value);
+		return map.put(field, value);
 	}
 
 	public void nullify(String... fields) {
 		if (fields == null)
 			return;
-		for (String field : fields)
+		for (var field : fields) {
 			put(field, null);
+		}
 	}
 
 	public void removeEmptyOrNull() {
@@ -147,14 +159,15 @@ public class ObjectMap extends HashMap<String, Object> {
 
 	@SuppressWarnings("unchecked")
 	private void removeEmptyOrNull(Map<String, Object> map) {
-		for (String key : new HashSet<>(map.keySet())) {
-			Object value = map.get(key);
-			if (map.get(key) == null)
+		for (var key : new HashSet<>(map.keySet())) {
+			var value = map.get(key);
+			if (map.get(key) == null) {
 				map.remove(key);
-			else if (value instanceof String && ((String) value).isEmpty())
+			} else if (value instanceof String && ((String) value).isEmpty()) {
 				map.remove(key);
-			else if (value instanceof Map)
+			} else if (value instanceof Map) {
 				removeEmptyOrNull((Map<String, Object>) value);
+			}
 		}
 	}
 
@@ -173,11 +186,12 @@ public class ObjectMap extends HashMap<String, Object> {
 
 	@SuppressWarnings("unchecked")
 	public <T> List<T> getAll(String field, Class<T> clazz) {
-		List<T> values = new ArrayList<>();
-		Collection<Object> all = getAll(this, field);
-		for (Object value : all) {
-			if (clazz == Long.class && value instanceof Integer)
+		var values = new ArrayList<T>();
+		var all = getAll(this, field);
+		for (var value : all) {
+			if (clazz == Long.class && value instanceof Integer) {
 				value = ((Integer) value).longValue();
+			}
 			values.add((T) value);
 		}
 		return values;
@@ -186,15 +200,16 @@ public class ObjectMap extends HashMap<String, Object> {
 	@SuppressWarnings("unchecked")
 	private Collection<Object> getAll(Map<String, Object> map, String field) {
 		Collection<Object> all = new ArrayList<>();
-		if (field.contains(".")) {
-			String prefix = field.substring(0, field.lastIndexOf('.'));
-			field = field.substring(field.lastIndexOf('.') + 1);
-			Collection<Object> allNext = getAll(map, prefix);
-			for (Object next : allNext)
-				if (next instanceof Map)
-					all.addAll(getAll((Map<String, Object>) next, field));
-		} else
-			all = toArray(map.get(field));
+		if (!field.contains("."))
+			return toArray(map.get(field));
+		var prefix = field.substring(0, field.lastIndexOf('.'));
+		field = field.substring(field.lastIndexOf('.') + 1);
+		var allNext = getAll(map, prefix);
+		for (var next : allNext) {
+			if (next instanceof Map) {
+				all.addAll(getAll((Map<String, Object>) next, field));
+			}
+		}
 		return all;
 	}
 
@@ -203,39 +218,43 @@ public class ObjectMap extends HashMap<String, Object> {
 	@SuppressWarnings("unchecked")
 	private <T> T get(Map<String, Object> map, String field, boolean createMissing, boolean initialCall) {
 		if (field.contains(".")) {
-			String prefix = field.substring(0, field.lastIndexOf('.'));
+			var prefix = field.substring(0, field.lastIndexOf('.'));
 			field = field.substring(field.lastIndexOf('.') + 1);
 			map = get(map, prefix, createMissing, false);
 		}
 		Object value = null;
-		if (map != null)
-			if (map == this)
+		if (map != null) {
+			if (map == this) {
 				value = super.get(field);
-			else
+			} else {
 				value = map.get(field);
-		if (value == null && createMissing && !initialCall)
+			}
+		}
+		if (value == null && createMissing && !initialCall) {
 			value = new HashMap<String, Object>();
+		}
 		return (T) value;
 	}
 
 	public int getArrayLength(String field) {
-		Object array = get(this, field, false, true);
-		if (array == null)
+		var array = get(this, field, false, true);
+		if (array == null) {
 			array = 0;
+		}
 		if (array instanceof Collection)
 			return ((Collection<?>) array).size();
 		return 0;
 	}
 
 	public String[] getStringArray(String field) {
-		Object value = get(field);
+		var value = get(field);
 		if (value == null)
 			return null;
-		if (value instanceof String[])
-			return (String[]) value;
+		if (value instanceof String[] array)
+			return array;
 		if (value instanceof Collection) {
-			List<String> values = new ArrayList<>();
-			for (Object v : (Collection<?>) value) {
+			var values = new ArrayList<String>();
+			for (var v : (Collection<?>) value) {
 				values.add(v.toString());
 			}
 			return values.toArray(new String[values.size()]);
@@ -244,34 +263,34 @@ public class ObjectMap extends HashMap<String, Object> {
 	}
 
 	public String getString(String field) {
-		Object value = get(field);
+		var value = get(field);
 		if (value == null)
 			return null;
-		if (value instanceof String[])
-			return ((String[]) value)[0];
+		if (value instanceof String[] array)
+			return array[0];
 		return value.toString();
 	}
 
 	public long getLong(String field) {
-		Object value = get(field);
+		var value = get(field);
 		if (value == null)
 			return 0;
 		try {
-			if (value instanceof String[])
-				return new Double(Double.parseDouble(((String[]) value)[0])).longValue();
-			return new Double(Double.parseDouble(value.toString())).longValue();
+			if (value instanceof String[] array)
+				return Double.valueOf(Double.parseDouble(array[0])).longValue();
+			return Double.valueOf(Double.parseDouble(value.toString())).longValue();
 		} catch (NumberFormatException e) {
 			return 0;
 		}
 	}
 
 	public double getDouble(String field) {
-		Object value = get(field);
+		var value = get(field);
 		if (value == null)
 			return 0;
 		try {
-			if (value instanceof String[])
-				return Double.parseDouble(((String[]) value)[0]);
+			if (value instanceof String[] array)
+				return Double.parseDouble(array[0]);
 			return Double.parseDouble(value.toString());
 		} catch (NumberFormatException e) {
 			return 0;
@@ -279,12 +298,12 @@ public class ObjectMap extends HashMap<String, Object> {
 	}
 
 	public int getInteger(String field) {
-		Object value = get(field);
+		var value = get(field);
 		if (value == null)
 			return 0;
 		try {
-			if (value instanceof String[])
-				return Integer.parseInt(((String[]) value)[0]);
+			if (value instanceof String[] array)
+				return Integer.parseInt(array[0]);
 			return Integer.parseInt(value.toString());
 		} catch (NumberFormatException e) {
 			return 0;
@@ -292,24 +311,58 @@ public class ObjectMap extends HashMap<String, Object> {
 	}
 
 	public boolean getBoolean(String field) {
-		Object value = get(field);
+		var value = get(field);
 		if (value == null)
 			return false;
 		String stringValue = null;
-		if (value instanceof String[])
-			stringValue = ((String[]) value)[0].toLowerCase();
-		else
+		if (value instanceof String[] array) {
+			stringValue = array[0].toLowerCase();
+		} else {
 			stringValue = value.toString().toLowerCase();
-		switch (stringValue) {
-		case "true":
-			return true;
-		case "on":
-			return true;
-		case "yes":
-			return true;
-		default:
-			return false;
 		}
+		return switch (stringValue) {
+		case "true", "on", "yes" -> true;
+		default -> false;
+		};
 	}
+
+	public boolean isArray(String field) {
+		var value = get(field);
+		if (value == null)
+			return false;
+		if (value instanceof Collection)
+			return true;
+		if (value.getClass().isArray())
+			return true;
+		return false;
+	}
+
+	@SuppressWarnings("unchecked")
+	public <T> List<T> getArray(String field) {
+		var value = get(field);
+		if (value == null)
+			return null;
+		if (value instanceof Collection)
+			return new ArrayList<>((Collection<T>) value);
+		if (value.getClass().isArray())
+			return Arrays.asList((T[]) value);
+		return null;
+	}
+
+	public boolean isObject(String field) {
+		var value = get(field);
+		return value instanceof Map;
+	}
+
+	@SuppressWarnings("unchecked")
+	public ObjectMap getObject(String field) {
+		var value = get(field);
+		if (value instanceof Map)
+			return ObjectMap.fromMap((Map<String, Object>) value);
+		return null;
+	}
+	
+	@JsonIgnoreType
+	private class IgnoreMixIn {}
 
 }
